# checkyoself

./: .gitignore  Pipfile  README.md  checkyoself.py  setup.cfg
chikkity/: check.py
