# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: Copyright 2020 David Seaward and contributors

[metadata]
name = checkyoself
full_name = Check yo' self (dibbity deb remix)
version = 0.0.2
description = Which online repositories does my system rely on?
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = GPL-3.0-or-later
author = David Seaward
author_email = david@librem.one
url = https://gitlab.com/lofidevops/checkyoself
classifiers =
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security

[options]
packages = find:
include_package_data = True
install_requires =
    click >=7.0, <8.0

[options.entry_points]
console_scripts =
    checkyoself = chikkity.check:yo_self

[coverage:run]
omit =
    */.local/*
    *.egg-info/*
